[gd_scene load_steps=14 format=3 uid="uid://cp1k1cavisb5e"]

[ext_resource type="Script" path="res://Menus/menu.gd" id="1_nbucm"]
[ext_resource type="Texture2D" uid="uid://dkfe5i6hjpypy" path="res://Art/Buttons/botao_jogar_normal.png" id="2_ujjxg"]
[ext_resource type="Texture2D" uid="uid://bi6x41uq3oq7q" path="res://Art/Buttons/botao_jogar_apertado.png" id="3_nnn1v"]
[ext_resource type="Texture2D" uid="uid://bfce6nixuwetb" path="res://Art/Buttons/botao_recordes_normal.png" id="4_1ruxu"]
[ext_resource type="Texture2D" uid="uid://n15olu7vc2d3" path="res://Art/Buttons/botao_jogar_hover.png" id="4_i8ao7"]
[ext_resource type="Texture2D" uid="uid://vptt8x81whvx" path="res://Art/Buttons/botao_recordes_apertado.png" id="5_csi6s"]
[ext_resource type="Texture2D" uid="uid://bw5vkj48ux1of" path="res://Art/Buttons/botao_recordes_hover.png" id="6_7dw3h"]
[ext_resource type="Texture2D" uid="uid://exo8kp6ku4xx" path="res://Art/Buttons/botao_como_jogar_normal.png" id="7_14mna"]
[ext_resource type="Texture2D" uid="uid://b5011fbrbppw6" path="res://Art/Buttons/botao_como_jogar_apertado.png" id="8_j0ixr"]
[ext_resource type="Texture2D" uid="uid://drmu7rxl06mqe" path="res://Art/Buttons/botao_como_jogar_hover.png" id="9_acyp5"]
[ext_resource type="Texture2D" uid="uid://briynjth7f5h0" path="res://Art/Buttons/botao_sair_normal.png" id="10_370pr"]
[ext_resource type="Texture2D" uid="uid://b4vdlykln6iia" path="res://Art/Buttons/botao_sair_apertado.png" id="11_7pfo5"]
[ext_resource type="Texture2D" uid="uid://dsqpsnqxoorp2" path="res://Art/Buttons/botao_sair_hover.png" id="12_e5nt5"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_nbucm")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -60.0
offset_right = 89.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="Start" type="TextureButton" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("2_ujjxg")
texture_pressed = ExtResource("3_nnn1v")
texture_focused = ExtResource("4_i8ao7")

[node name="Score" type="TextureButton" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("4_1ruxu")
texture_pressed = ExtResource("5_csi6s")
texture_focused = ExtResource("6_7dw3h")

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="HowToPlay" type="TextureButton" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("7_14mna")
texture_pressed = ExtResource("8_j0ixr")
texture_focused = ExtResource("9_acyp5")

[node name="Quit" type="TextureButton" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
texture_filter = 1
layout_mode = 2
texture_normal = ExtResource("10_370pr")
texture_pressed = ExtResource("11_7pfo5")
texture_focused = ExtResource("12_e5nt5")

[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer/Score" to="." method="_on_score_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer2/HowToPlay" to="." method="_on_start_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer2/Quit" to="." method="_on_quit_pressed"]
